...
                dialogOpen = true
            },
            isInProgress = isUploading,
            backgroundColor = if (uiState.isEditing) MaterialTheme.colors.secondary else MaterialTheme.colors.secondaryVariant,
            progressIndicator = {
                SmallCircularProgressIndicator(
                    Modifier.semantics { contentDescription = "Uploading quiz" },
                    color = MaterialTheme.colors.onSecondary
                )
            }
        ) {
            Icon(
                painter = painterResource(R.drawable.ic_publish_24),
...
                tint = MaterialTheme.colors.onSecondary
            )
        }
        if (!uiState.isEditing) {
            Spacer(Modifier.height(16.dp))
            ExtendedFloatingActionButton(
                text = { Text("Add question") },
                onClick = {
                    focusManager.clearFocus()
                    keyboardController?.hide()
                    coroutineScope.launch {
                        listState.scrollToItem(listState.layoutInfo.totalItemsCount)
                    }
...
            onDismissRequest = { dialogOpen = false },
            confirmButton = {
                TextButton(onClick = {
                    dialogOpen = false
                    onDeleteQuestion()
                }) {
                    Text("Delete")
                }
            },
            dismissButton = {
                TextButton(onClick = { dialogOpen = false }) {
                    Text("Cancel")
                }
...
            correctAnswer = 1,
            answers = listOf(
                Question.MultipleChoice.Answer("Answer text 1"),
                Question.MultipleChoice.Answer("Answer text 2")
            ),
        ),
        Question.FillIn(text = "Fill In Question", "Correct answer"),
        Question.Empty,
    )
    val questionState = questions.map {
        when (it) {
            is Question.MultipleChoice -> PreviewMultipleChoiceState(data = it)
            is Question.FillIn -> PreviewFillInState(data = it)
...

    AppTextField(
        state = title,
        onTextChange = onTitleChange,
        modifier = Modifier.fillMaxWidth(),
        containerModifier = Modifier.fillMaxWidth(),
        label = "Quiz Title",
        keyboardOptions = KeyboardOptions(imeAction = ImeAction.Done),
        keyboardActions = KeyboardActions(onDone = { keyboardController?.hide() })
    )
}

/**
...
        Box(
            Modifier
                .clickable(onClick = onClick)
                .fillMaxHeight(),
            contentAlignment = Alignment.CenterStart
        ) {
            Text("Public Quiz")
        }
        Spacer(Modifier.weight(1.0f))
        Switch(
            checked = isPublic,
            onCheckedChange = { onClick() }
        )
    }
    if (!isPublic) {
        AppTextField(
            state = textFieldState,
            onTextChange = onChangeAllowedUsers,
            label = "Allowed Users",
            modifier = Modifier.fillMaxWidth(),
            containerModifier = Modifier.fillMaxWidth(),
            keyboardOptions = KeyboardOptions(imeAction = ImeAction.Done),
            keyboardActions = KeyboardActions(onDone = { keyboardController?.hide() })
        )
    }
...
        Box(
            Modifier
                .clickable(onClick = onClick)
                .fillMaxHeight(),
            contentAlignment = Alignment.CenterStart
        ) {
            Text("Date:", textAlign = TextAlign.Center)
        }
        Spacer(Modifier.weight(1.0f))
        OutlinedButton(onClick = onClick) {
            Text(text = expirationDateStr)
        }
    }
...
        Box(
            Modifier
                .clickable(onClick = onClick)
                .fillMaxHeight(),
            contentAlignment = Alignment.CenterStart
        ) {
            Text("Time:", textAlign = TextAlign.Center)
        }
        Spacer(Modifier.weight(1.0f))
        OutlinedButton(onClick = onClick) {
            Text(text = expirationTimeStr)
        }
    }
...
            onDismissRequest = { dialogOpen = false },
            confirmButton = {
                TextButton(onClick = {
                    dialogOpen = false
                    onSelectType(nextType)
                }) {
                    Text("Confirm")
                }
            },
            dismissButton = {
                TextButton(onClick = { dialogOpen = false }) {
                    Text("Cancel")
                }
            },
            text = { Text("Change question type?") },
        )
    }

    val onClickType: (QuestionType) -> Unit = {
        nextType = it
        if (currentType == QuestionType.Empty) {
...

        // Row of icons representing selected type while also giving ability to change it
        // by pressing the desired type (resets current Question)
        Row(Modifier.selectableGroup()) {
            Icon(
                painter = painterResource(R.drawable.ic_border_color_24),
                contentDescription = "Fill in the blank",
                tint = if (currentType == QuestionType.FillIn) MaterialTheme.colors.secondary else MaterialTheme.colors.onSurface,
                modifier = Modifier
                    .selectable(
                        selected = currentType == QuestionType.FillIn,
                        onClick = {
                            onClickType(QuestionType.FillIn)
                        })
                    .padding(12.dp)
                    .requiredSize(24.dp),
            )
            Icon(
                painter = painterResource(R.drawable.ic_format_list_numbered_24),
                contentDescription = "Multiple choice",
                tint = if (currentType == QuestionType.MultipleChoice) MaterialTheme.colors.secondary else MaterialTheme.colors.onSurface,
                modifier = Modifier
                    .selectable(
                        selected = currentType == QuestionType.MultipleChoice,
                        onClick = {
                            onClickType(QuestionType.MultipleChoice)
...
            keyboardController?.hide()
            question.addAnswer()
            scrollToQuestionEnd()
        }
        Box(Modifier.fillMaxWidth(), contentAlignment = Alignment.CenterEnd) {
            OutlinedButton(onClick = addAnswerAndScroll) {
                Text("Add answer")
            }
        }
    }
}

@Composable
...
                .padding(top = 12.dp) // Computed size of Radio is 48dp with 24dp icon, push down by 12 to center
                .alignBy(FirstBaseline) // Align entire Radio and its internal padding
        )
        AppTextField(
            state = answer.text,
            onTextChange = { answer.changeText(it) },
            label = "Answer text",
            modifier = Modifier.fillMaxWidth(),
            containerModifier = Modifier
                .alignBy(FirstBaseline)
                .weight(1.0f),
            keyboardOptions = KeyboardOptions(imeAction = ImeAction.Done),
            keyboardActions = KeyboardActions(onDone = { keyboardController?.hide() })
...
